*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
@@ -4,12 +4,88 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Configuring and installing a product</TITLE>
+<TITLE>Customizing a product</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h2>Configuring and installing a product</h2>
+<h2>Customizing a product</h2>
+<p>The plug-in associated with a <a href="product_def_primary.htm">primary
+feature</a> is where the branding information for a product is specified.&nbsp;
+There are many customizable aspects of a product.&nbsp; Some of these are
+specified by merely placing a file in the directory for the primary feature's
+plug-in.&nbsp; Other aspects are specified in a special customization file, <b>plugin_customization.ini.</b></p>
+<p>Referring once again to our sample product's primary feature plug-in, let's
+look closer at how the product is customized.</p>
+<pre><font color="#4444CC"><b>com.example.acme.acmefeature_1.0.0/</b></font><font color="#4444CC">
+		plugin.xml
+		<b>about.ini
+		about.html
+		about.mappings
+		about.properties
+		acme.gif
+		plugin_customization.ini
+		splash.bmp
+		welcome.xml</b></font></pre>
+<h3>About dialogs</h3>
+<p>The platform &quot;about&quot; dialog is shown whenever the user selects <b>Help-&gt;About
+</b>in the workbench menu.&nbsp;&nbsp;</p>
+<p><img border="0" src="images/about.jpg" width="486" height="321"></p>
+<p>The about dialog is constructed using information supplied by features and
+plug-ins.&nbsp; All features and plug-ins should contribute an <b>about.html</b>
+file that provides information about that particular plug-in.&nbsp; This
+information is displayed when the user requests feature details or plug-in
+details and selects a particular feature or plug-in.</p>
+<p>The primary feature also supplies the information and graphics for the
+overall product.&nbsp; Additional files are used to specify this information.</p>
+<ul>
+  <li><b>about.ini</b> specifies the about text and images for features,
+    windows, and the about dialog itself.&nbsp; It also specifies the welcome
+    page.&nbsp; See <a href="../reference/misc/about_customization.html">Customization
+    using about.ini </a>for a complete description of the format of this file.&nbsp;</li>
+  <li><b>about.properties</b> should be used to hold translated strings from the
+    <b>about.ini </b>file (using %var% as the value in about.ini paired with an
+    entry for the key &quot;var&quot; in about.properties.&nbsp; This file is a <b>java.io.Properties</b>
+    format file.</li>
+  <li><b>about.mappings</b> can be used to fill in values for fill-in fields in
+    the about text.&nbsp; This is useful when the about text contains
+    information specific to a particular install, such as license key, install
+    date, or licensed user. For example, the about text could be defined as
+    &quot;AcmeWeb is licensed to {0}&quot;.&nbsp; The about.mappings file could
+    be generated at install time based on input from the user.&nbsp; The final
+    form should contain a mapping for the field, such as &quot;0=Joe Q. Webuser&quot;.&nbsp;
+    The about.mappings file is a <b>java.io.Properties</b> format file.</li>
+</ul>
+<h3>Window images</h3>
+<p>A 16x16 pixel color image can be used to brand windows created by the
+product.&nbsp; It will appear in the upper left hand corner of product
+windows.&nbsp; It is specified in the <b>windowImage</b> attribute in the <b>about.ini</b>
+file.&nbsp; The path should be specified as a plug-in relative path.&nbsp; A
+proper entry for the directory structure shown above would be as follows:</p>
+<pre><font color="#4444CC">windowImage=acme.gif</font></pre>
+<h3>Welcome page</h3>
+<p>The description for the product's welcome page should be defined in an xml
+file in the format described in <a href="http://../reference/misc/welcome.html">Platform
+Welcome Page Configuration</a>.&nbsp; It is specified in the welcomePage
+attribute in the about.ini file. The path should be specified as a plug-in
+relative path.&nbsp; A proper entry for the directory structure shown above
+would be as follows:</p>
+<pre><font color="#4444CC">welcomePage=welcome.xml</font></pre>
+<h3>Splash screens</h3>
+<p>The product splash screen is supplied in a <b>splash.bmp</b> file located in
+the primary feature plug-in directory.&nbsp; The image should be supplied in
+24-bit color BMP format and should be approximately 500x330 pixels in
+size.&nbsp; If splash screens need to be customized for different locales, they
+can be placed in a fragment of the primary feature's plug-in.</p>
+<h3>Default perspective</h3>
+<p>The default perspective for the product is specified in the <b>plugin_customization.ini</b>
+file.&nbsp; This file is a <b>java.io.Properties</b> format file.&nbsp; The
+following example assumes that the product should be launched with the resource
+perspective as the default perspective.</p>
+<pre><font color="#4444CC">org.eclipse.ui/defaultPerspectiveId=org.eclipse.ui.resourcePerspective
+</font></pre>
+<h3>Preferences defaults</h3>
+<p>The default values for preferences can be specified....(where?)</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
