--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
@@ -46,9 +46,13 @@ a Windows platform:</p>
 			com.example.acme.acmefeature_1.0.0/
 				plugin.xml
 				about.ini
+				about.html
+				about.mappings
+				about.properties
 				acme.gif
 				plugin_customization.ini
 				splash.jpg
+				welcome.xml
 			com.example.acme.acmewebsupport_1.0.0/
 			org.eclipse.platform_2.0.0/
 			...
