--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
@@ -30,9 +30,41 @@ only one primary feature gets control when the platform is launched.&nbsp; The
 primary feature is specified using the <b>-feature</b> command line option of
 eclipse.exe.&nbsp; Typically, a product only defines branding information for
 one feature and designates this feature as the primary feature.&nbsp; </p>
-<p>&lt;NEED TO EXPLAIN RELATIONSHIP BETWEEN PRIMARY FEATURE AND PRIMARY FEATURE
-PLUG-IN.&nbsp; How is it specified?&nbsp; Because it has the same name?&nbsp;
-How do I know which plug-in to put the splah.bmp in, etc.?&gt;</p>
+<p>The branding information for the feature is located in a plug-in of the same
+name as the primary feature.&nbsp; The files that designate and define branding
+information for our hypothetical acmeweb application are highlighted in the
+sample directory structure below:</p>
+<pre><font color="#4444CC">acmeweb/
+	<b>acmeweb.exe	</b></font>(product executable - invokes eclipse.exe and specifies the primary feature)
+	<font color="#4444CC">eclipse/</font>
+		<font color="#4444CC">.eclipseproduct</font>
+		<font color="#4444CC">eclipse.exe
+		startup.jar
+		install.ini
+		.config/
+		platform.cfg
+		jre/
+		features/</font>
+			<font color="#4444CC"><b>com.example.acme.acmefeature_1.0.0/</b>&nbsp;&nbsp;&nbsp; </font>(primary feature)<font color="#4444CC">
+				feature.xml
+			org.eclipse.platform_2.0.0/
+			org.eclipse.platform.win32_2.0.0/
+		plugins/
+			<b>com.example.acme.acmefeature_1.0.0/</b>&nbsp;&nbsp;&nbsp; </font>(plug-in for primary feature.  Contains branding info.)<font color="#4444CC">
+				plugin.xml
+				<b>about.ini
+				about.html
+				about.mappings
+				about.properties
+				acme.gif
+				plugin_customization.ini
+				splash.jpg
+				welcome.xml</b>
+			com.example.acme.acmewebsupport_1.0.0/
+			org.eclipse.platform_2.0.0/
+			...
+			links/
+			...</font></pre>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
