*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
@@ -12,9 +12,11 @@
 <h2>Customizing a product</h2>
 <p>The plug-in associated with a <a href="product_def_primary.htm">primary
 feature</a> is where the branding information for a product is specified.&nbsp;
-There are many customizable aspects of a product.&nbsp; Some of these are
-specified by merely placing a file in the directory for the primary feature's
-plug-in.&nbsp; Other aspects are specified in a special customization file, <b>plugin_customization.ini.</b></p>
+There are many customizable aspects of a product.&nbsp; Product-level
+customizations are defined using the <b>about.ini</b> file and other files
+described therein.&nbsp; Products can also control the default preference values
+of other plug-ins.&nbsp; This is done using the <b>plugin_customization.ini</b>
+file.</p>
 <p>Referring once again to our sample product's primary feature plug-in, let's
 look closer at how the product is customized.</p>
 <pre><font color="#4444CC"><b>com.example.acme.acmefeature_1.0.0/</b></font><font color="#4444CC">
@@ -77,15 +79,24 @@ the primary feature plug-in directory.&nbsp; The image should be supplied in
 24-bit color BMP format and should be approximately 500x330 pixels in
 size.&nbsp; If splash screens need to be customized for different locales, they
 can be placed in a fragment of the primary feature's plug-in.</p>
-<h3>Default perspective</h3>
-<p>The default perspective for the product is specified in the <b>plugin_customization.ini</b>
-file.&nbsp; This file is a <b>java.io.Properties</b> format file.&nbsp; The
+<h3>Preferences defaults</h3>
+<p>The <b>plugin_customization.ini</b>
+ file is used to set the default preference values for preferences defined by
+other plug-ins.&nbsp; This file is a <b>java.io.Properties</b> format file.
+Typically this file is used to set the values for preferences that are published
+as part of a plug-in's public API.&nbsp; That is, you are taking a risk if you
+refer to preferences that are used by plug-ins but not defined formally in the
+API.</p>
+<p>One common customization is to set the default perspective for the
+workbench.&nbsp; This preference is defined in the <b>org.eclipse.ui </b>plug-in.&nbsp;&nbsp;
+The
 following example assumes that the product should be launched with the resource
 perspective as the default perspective.</p>
-<pre><font color="#4444CC">org.eclipse.ui/defaultPerspectiveId=org.eclipse.ui.resourcePerspective
-</font></pre>
-<h3>Preferences defaults</h3>
-<p>The default values for preferences can be specified....(where?)</p>
+<pre><font color="#4444CC">org.eclipse.ui/defaultPerspectiveId=org.eclipse.ui.resourcePerspective</font></pre>
+<p>If you discover you need to change the default value for one of another plug-in's
+preferences, consult the API documentation for that plug-in to see if the
+preference is considered public.<font color="#4444CC"><br>
+</font></p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
