*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
@@ -80,13 +80,19 @@ by doing the following:</p>
         and <b>acmeweb/eclipse/plugins</b></li>
     </ul>
   </li>
-  <li>create a marker file, <b>.eclipseproduct</b>, in <b>acmeweb/eclipse</b></li>
+  <li>create a marker file, <b>.eclipseproduct</b>, in <b>acmeweb/eclipse</b>.&nbsp;
+    The marker file is a <b>java.io.Properties</b> format file that indicates
+    the name, id, and version of the product.</li>
   <li>store any necessary install info (user, license, date) that is to be shown
     in the about dialog in <b>acmeweb/eclipse/plugins/com.example.acmefeature_1.0.0/about.mappings</b></li>
   <li>ensure that the product shortcut or executable invokes eclipse.exe with
     the <b>-feature</b> option specifying <b>com.example.acme.acmefeature</b> as
     the primary feature</li>
 </ul>
+<h3>Multi-user issues</h3>
+<p>When a product is installed for the intention of allowing multiple users,
+care must be taken to separate individual users' data (such as the <b>workspace</b>
+directory) from the shared product install directory.</p>
 <h3>Uninstall issues</h3>
 <p>When a product is uninstalled, the following concepts are important.</p>
 <ul>
@@ -97,7 +103,8 @@ by doing the following:</p>
     removed.</li>
   <li>except for the point above, <b>only</b> those files installed by the
     installation program in other directories should be removed.&nbsp; It is
-    important to preserve any important data, such as the workspace data, so
+    important to preserve any important data, such as the <b> workspace</b>
+    directory, so
     that reinstalling the product after an uninstall will produce expected
     results.</li>
 </ul>
