*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
@@ -10,8 +10,23 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h2>Launching a program</h2>
-<p>Discuss LaunchConfigurations, a Launch, and a Process.&nbsp; </p>
-<p>Can launch in run or debug mode.</p>
+<p>The platform debug plug-ins allow you to extend the platform so that your
+program can be launched properly, obtaining input from the user if
+necessary.&nbsp; </p>
+<p>The class <a href="../reference/api/org/eclipse/debug/core/ILaunchConfiguration.html">ILaunchConfiguration</a>
+is used to describe how a program should be launched.&nbsp; A launch
+configuration keeps a store of named attributes that can be used to store data
+specific for a particular kind of launcher.&nbsp; Launch configurations can be
+stored in a file or locally in the workspace.&nbsp;&nbsp; </p>
+<p>Plug-ins contribute unique types of launchers and provide an <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html">ILaunchConfigurationDelegate</a>
+that can launch a program given the expected type of launch configuration.&nbsp; Once the program
+is launched, an <a href="../reference/api/org/eclipse/debug/core/ILaunch.html">ILaunch
+</a>object is used to represent the launched session.&nbsp; This object can be
+queried for information such as running processes, debug session information,
+and source code location.&nbsp; A launch knows what configuration was used to create
+it.&nbsp; </p>
+<p><img border="0" src="images/launch.jpg" width="495" height="191"> </p>
+<p>&nbsp; </p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
