--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -13,14 +13,24 @@
 Program debug and launching support</H1>
 <p>The resource plug-ins in the Eclipse platform allow you to manage a set a
 source files for a program and compile them using an incremental project
-builder.&nbsp; Once an executable program is built, how does a plug-in invoke
-it?&nbsp;</p>
+builder.&nbsp; Plug-ins can define new builders that handle special resource
+types, such as source files for a particular programming language.&nbsp; Once an
+executable program is built with your plug-in's builder, how can you make sure
+that it gets invoked correctly?</p>
 <p>The <b><a href="http://../reference/api/org/eclipse/debug/core/packages.html"> org.eclipse.debug.core</a>
-</b> plug-in provides the API that allow you to
-describe the method for launching a program in order to run or debug it.&nbsp;
-The <b><a href="http://../reference/api/org/eclipse/debug/ui/packages.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
-launch parameters and implementation of powerful debuggers.</p>
-<p>&nbsp;</p>
+</b> plug-in provides the API that allows a program to define a configuration
+for launching a program.&nbsp; The program can be launched for regular execution
+or in debug mode, depending on the capabilities of your plug-in.&nbsp; The
+Eclipse Java Development Tools (JDT) use the platform debug support to launch
+Java VM's and the Java debugger.&nbsp;&nbsp;</p>
+<p>The <b><a href="http://../reference/api/org/eclipse/debug/ui/packages.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
+launch parameters and utility classes that ease the implementation of powerful debuggers.</p>
+<p>There are some shared concepts in launching and debugging programs that are
+implemented in the platform debug support.&nbsp; However, the best way to
+understand how to use the platform debug support is to study a robust concrete
+implementation of launching and debugging, such as the JDT launching and debug
+tools.&nbsp; We'll review the major concepts of the platform debug support in
+order to provide a roadmap for studying a concrete implementation.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
