--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
@@ -4,13 +4,39 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Debug UI utility classes</TITLE>
+<TITLE>Launch configuration dialogs</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Debug UI utility classes</h3>
-<p>DebugUITools, IDebugView/AbstractDebugView</p>
+<h3>Launch configuration dialogs</h3>
+<p>Launch configurations can most easily be visualized by looking at their
+corresponding UI.&nbsp; Users interact with a launch configuration dialog to
+create instances of the different types of launch configurations that have been
+contributed by plug-ins.&nbsp; Each type of launch configuration defines a group
+of tabs that collect and display information about the configuration.&nbsp; The
+tab group for local java applications is shown below.</p>
+<p><img border="0" src="images/launchdialog.jpg" width="628" height="560"></p>
+<p>The tabs are contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTabGroups.html">org.eclipse.debug.ui.launchConfigurationTabGroups</a>
+extension point.&nbsp;&nbsp;&nbsp; The markup for this extension is
+straightforward. You associate the id of a configuration type (contributed using
+<a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html">org.eclipse.debug.core.launchConfigurationTypes</a>)
+with a class that implements <a href="http://../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html">ILaunchConfigurationTabGroup</a>.&nbsp;
+The Java application tab group is contributed like this:</p>
+<pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.launchConfigurationTabGroups&quot;&gt;
+	&lt;launchConfigurationTabGroup
+		id=&quot;org.eclipse.jdt.debug.ui.launchConfigurationTabGroup.localJavaApplication&quot;
+		type =&quot;org.eclipse.jdt.launching.localJavaApplication&quot;
+		class=&quot;org.eclipse.jdt.internal.debug.ui.launcher.LocalJavaApplicationTabGroup&quot;&gt;
+	&lt;/launchConfigurationTabGroup&gt;
+&lt;/extension&gt;</font></pre>
+<p>Your tab group class is responsible for creating the necessary tabs and
+displaying and saving the relevant data from the launch configuration
+attributes.&nbsp; A tab that is common to all configurations, <a href="../reference/api/org/eclipse/ui/CommonTab.html">CommonTab</a>,
+is already implemented and can be created by any configuration.&nbsp; This tab
+manages the saving of the launch configuration as well as collecting common
+preferences.</p>
+<p><img border="0" src="images/launchtabs.jpg" width="451" height="336"></p>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
