--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
@@ -10,8 +10,74 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Platform debug model</h3>
-<p>Debug elements, the debug action interfaces, and debug events..</p>
-<p>source locator extension point</p>
+<p>The platform debug model defines generic debug classes that are intended to
+be extended in concrete, language-specific implementations.</p>
+<h4>Artifacts</h4>
+<p>The model includes classes that represent different artifacts in a program
+under debug.&nbsp; All of the artifacts implement <a href="../reference/api/org/eclipse/debug/core/model/IDebugElement.html">IDebugElement</a>
+in addition to their own interfaces.&nbsp; The model includes definitions for
+the following artifacts:</p>
+<ul>
+  <li>Debug targets (<a href="../reference/api/org/eclipse/debug/core/model/IDebugTarget.html">IDebugTarget</a>)
+    - a debuggable execution context, such as a process or virtual machine</li>
+  <li>Expressions (<a href="../reference/api/org/eclipse/debug/core/model/IExpression.html">IExpression</a>)
+    - a snippet of code that can be evaluated to produce a value</li>
+  <li>Memory blocks (<a href="../reference/api/org/eclipse/debug/core/model/IMemoryBlock.html">IMemoryBlock</a>)
+    - a contiguous segment of memory in an execution context</li>
+  <li>Registers (<a href="../reference/api/org/eclipse/debug/core/model/IRegister.html">IRegister</a>)
+    - a named variable in a register group</li>
+  <li>Register groups (<a href="../reference/api/org/eclipse/debug/core/model/IRegisterGroup.html">IRegisterGroup</a>)
+    - a group of registers assigned to a stack frame</li>
+  <li>Stack frames (<a href="../reference/api/org/eclipse/debug/core/model/IStackFrame.html">IStackFrame</a>)
+    - an execution context in a suspended thread containing local variables and
+    arguments</li>
+  <li>Threads (<a href="../reference/api/org/eclipse/debug/core/model/IThread.html">IThread</a>)
+    - a sequential flow of execution in a debug target containing stack frames</li>
+  <li>Values (<a href="../reference/api/org/eclipse/debug/core/model/IValue.html">IValue</a>)
+    - the value of a variable</li>
+  <li>Variables (<a href="../reference/api/org/eclipse/debug/core/model/IVariable.html">IVariable</a>)
+    - a visible data structure in a stack frame or value</li>
+</ul>
+<p>Plug-ins that implement language-specific debuggers typically extend these
+interfaces to include language-specific behavior.</p>
+<h4>Actions</h4>
+<p>The model also includes interfaces that define a set of debug actions that
+are common behaviors among debug artifacts.&nbsp; These interfaces are
+implemented by debug elements where appropriate.&nbsp; They include the
+following actions:</p>
+<ul>
+  <li>disconnect (<a href="../reference/api/org/eclipse/debug/core/model/IDisconnect.html">IDisconnect</a>)
+    - the ability to end a debug session with a target program and allow the
+    target to continue running</li>
+  <li>step (<a href="../reference/api/org/eclipse/debug/core/model/IStep.html">IStep</a>)
+    - the ability to step into, over, and return from the current execution
+    point</li>
+  <li>suspend and resume (<a href="../reference/api/org/eclipse/debug/core/model/ISuspendResume.html">ISuspendResume</a>)
+    - the ability to suspend and resume execution</li>
+  <li>terminate (<a href="../reference/api/org/eclipse/debug/core/model/ITerminate.html">ITerminate</a>)
+    - the ability to terminate an execution context</li>
+  <li>modify a value (<a href="../reference/api/org/eclipse/debug/core/model/IValueModification.html">IValueModification</a>)
+    - the ability to modify the value of a variable</li>
+</ul>
+<p>If you look at the definitions for the platform debug elements, you will see
+that different elements implement different debug actions.&nbsp; Standard
+interfaces for the elements and their behaviors allow the platform to provide
+abstract implementations of utility classes and UI support that can be extended
+for concrete implementations of debuggers.</p>
+<h4>Events</h4>
+<p>Debug events (<a href="../reference/api/org/eclipse/debug/core/DebugEvent.html">DebugEvent</a>)
+are used to describe events that occur as a program is being debugged.&nbsp;
+Debug events include the debug element that is associated with the event.&nbsp;
+Each kind of debug element has a specific set of events that it supports as
+documented in <a href="../reference/api/org/eclipse/debug/core/DebugEvent.html">DebugEvent</a>.&nbsp;
+</p>
+<p>Debugger UI classes typically listen to specific events for elements in order
+display information about changes that occur in the elements.&nbsp; Debug events
+arrive in groups called <b>debug event sets</b>.&nbsp; Events that occur at the
+same point of execution in a program arrive in the same set.&nbsp; Clients
+should implement an <a href="../reference/api/org/eclipse/debug/core/IDebugEventSetListener.html">IDebugEventSetListener</a>
+and register the listener with the <a href="../reference/api/org/eclipse/debug/core/packages.html">org.eclipse.debug.core</a>
+plug-in in order to receive debug events.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
