*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -13,10 +13,12 @@ Active help
 <H2>
 Active help</H2>
 
-<p>Active help is the ability to invoke a workbench action from on-line
-documentation.&nbsp; </p>
+<p>Active help is the ability to invoke Eclipse code from on-line
+documentation.&nbsp;It is implemented by including some JavaScript in your
+documentation that describes a class that should be run inside the Eclipse
+platform. </p>
 
-<p>Instead of writing, &quot;Go to the Window Menu and open the Preferences
+<p>For example, instead of writing, &quot;Go to the Window Menu and open the Preferences
 Dialog,&quot; your on-line help can include a link that will open the
 Preferences Dialog for the user.&nbsp; Active help links look like hyperlinks in
 the on-line help.</p>
