--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -19,7 +19,7 @@ is used to build an active help action.</p>
 
 <p>It is straightforward to implement an <a href="../reference/api/org/eclipse/help/ILiveHelpAction.html"><b>ILiveHelpAction</b></a><b>.&nbsp;
 </b>Your action will be invoked using a <b>run()</b> method.&nbsp; You must also
-implement a method that accepts a String parameter from the javascript.&nbsp;&nbsp;
+implement a method that accepts a String parameter from the JavaScript.&nbsp;&nbsp;
 If you don't need initialization data, you can just implement
 this method to do nothing.</p>
 
@@ -43,8 +43,8 @@ import org.eclipse.ui.internal.OpenPreferencesAction
 
 /**
 * Sample Active Help action.
-</font>* Note:  This action referes to internal workbench actions in order to
-* open the preferences page.<font color="#4444CC">
+* Note:  This action refers to internal workbench actions in order to
+* open the preferences page.
 */
 public class ActiveHelpOpenPreferencesAction implements ILiveHelpAction {
   String str;
