--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -14,13 +14,13 @@ Invoking the action from HTML</h3>
 
 <P >
  To include active help links in your documentation, you must first declare the
- use of the active help javascript in the <b>HEAD</b> tag of your HTML: </P>
+ use of the active help JavaScript in the <b>HEAD</b> tag of your HTML: </P>
 
 
 <pre ><font color="#4444CC"> &lt;script language=&quot;JavaScript&quot; src=&quot;../../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
 
 
-<P >The live help javascript is located in the <b>org.eclipse.help</b>
+<P >The live help JavaScript is located in the <b>org.eclipse.help</b>
 plug-in.&nbsp; You can refer to it using the help system's <a href="help_plugin_files.htm#help_plugin_files_xref">cross
 plug-in referencing</a> technique.&nbsp; In this example, the document with the
 active help link is located in the subdirectory <b>guide</b> underneath our
