--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -17,17 +17,27 @@ Writing the help action</h3>
 is used to build an active help action.</p>
 
 
-<p>It is straightforward to implement an <a href="../reference/api/org/eclipse/help/ILiveHelpAction.html"><b>ILiveHelpAction</b></a><b>.&nbsp;
-</b>Your action will be invoked using a <b>run()</b> method.&nbsp; You must also
-implement a method that accepts a String parameter from the JavaScript.&nbsp;&nbsp;
+<p>It is straightforward to implement an <a href="../reference/api/org/eclipse/help/ILiveHelpAction.html"><b>ILiveHelpAction</b></a><b>.</b>&nbsp;
+You must implement two methods.</p>
+
+
+<ul>
+  <li><b>run()</b> - This method is called to run the live help action.&nbsp;
+    This method will be called by the help system from a non-UI thread, so UI
+    access must be wrapped in a <b><a href="../reference/api/org/eclipse/swt/widgets/Display.html">Display.syncExec()</a></b>
+    method.&nbsp;&nbsp;</li>
+  <li><b>setInitializationString(String)</b> - This method is called to
+    initialize your action with a String data parameter you can specify in the
+    HTML which runs the JavaScript <b>liveAction</b>.&nbsp;&nbsp;
 If you don't need initialization data, you can just implement
-this method to do nothing.</p>
+this method to do nothing.&nbsp; This method is called before <b>run()</b>.</li>
+</ul>
 
 
 <p>Here is a simple implementation of a live help action that opens the
 preferences dialog.  Since the action that invokes the preference dialog is
 already implemented, our live help action is merely a wrapper for that
-action.&nbsp; We don't need any information from the javascript, so the
+action.&nbsp; We don't need any information from the JavaScript, so the
 initialization data is ignored.</p>
 
 
@@ -39,24 +49,32 @@ change in the future.</p>
 <pre><font color="#4444CC">package org.eclipse.platform.doc.isv.activeHelp;
 
 import org.eclipse.help.ILiveHelpAction;
-import org.eclipse.ui.internal.OpenPreferencesAction
+import org.eclipse.ui.internal.OpenPreferencesAction;
+import org.eclipse.swt.widgets.Display;
+
 
 /**
-* Sample Active Help action.
-* Note:  This action refers to internal workbench actions in order to
-* open the preferences page.
-*/
+ * Sample Active Help action.  
+ * Note:  This action refers to internal workbench actions in order to
+ * open the preferences page.  
+ */
 public class ActiveHelpOpenPreferencesAction implements ILiveHelpAction {
-  String str;
-
-  public void setInitializationString(String data) {
-    //ignore the data.  We do not use any javascript parameters.
-  }
-
-  public void run() {
-    new OpenPreferencesAction().run();      
-  }
-}</font></pre>
+	String str;
+	
+	public void setInitializationString(String data) {
+		// ignore the data.  We do not use any javascript parameters.
+	}
+	
+	public void run() {
+		// Active help does not run on the UI thread, so we must use syncExec
+		Display.getDefault().syncExec(new Runnable() {
+							public void run() {
+								new OpenPreferencesAction().run();
+							}
+		});		
+	}
+}
+</font></pre>
 
 
 <p>&nbsp;</p>
