--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -29,7 +29,7 @@ plug-in root and then refer to the <b>org.eclipse.help</b> plug-in. </P>
 
 
 <P >
- In the body of your documentation, you invoke the liveAction script. </P>
+ In the body of your documentation, you invoke the liveAction script.&nbsp;&nbsp; </P>
 
 
 <pre ><font color="#4444CC"> &lt;a href='javascript:liveAction(
@@ -38,15 +38,15 @@ plug-in root and then refer to the <b>org.eclipse.help</b> plug-in. </P>
 	&quot;&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</font></pre>
 
 
-<P >The parameters for <b>liveAction </b> include&nbsp; </P>
+<P >The parameters for <b>liveAction </b> are&nbsp; </P>
 
 
 <ul>
-  <li> the plug-in that
+  <li> the if of the plug-in that
 contains the action</li>
   <li>the name of the class that implements the action</li>
-  <li>a String that will be passed to the live help action using <b>setInitializationString</b>.&nbsp;
-    In our case, we don't need to pass a parameter from the page, so we just
+  <li>the String that will be passed to the live help action using <b>setInitializationString</b>.&nbsp;
+    We don't need to pass any information from the HTML page, so we just
     pass an empty string.</li>
 </ul>
 
