--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
@@ -10,9 +10,23 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h2>Debugging a program</h2>
-<p>Discuss general debugging process:&nbsp; the source, the target program,
-events firing, etc.&nbsp;&nbsp;</p>
-<p> (Could use a picture here).</p>
+<p>When you define a <a href="debug_launch.htm">launch configuration</a> for
+running a program, you can specify which modes (run, debug) your program
+supports.&nbsp; If you support debug mode, then you need to implement a debug
+model and UI that allow users to interact with your programs under debug.&nbsp;
+The core platform debug plug-in provides support for&nbsp;</p>
+<ul>
+  <li> a general debugging model</li>
+  <li>debug
+events and listeners</li>
+  <li>breakpoint management</li>
+  <li>expression evaluation&nbsp;</li>
+</ul>
+<p>The debug UI plug-in provides utility classes for implementing debug user
+interfaces.</p>
+<p>Since it's difficult to discuss generic debugging in any meaningful detail,
+we'll review the platform debug model and UI classes from the perspective of the
+Java debugger.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
