*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_expressions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_expressions.htm
@@ -10,7 +10,18 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Expressions</h3>
-<p>Expression manager</p>
+<p>An <b>expression</b> is a snippet of code that can be evaluated to produce a
+value.&nbsp; The context for an expression depends on the particular debug
+model.&nbsp; Some expressions may need to be evaluated at a specific location in
+the program so that the variables can be referenced.&nbsp; <a href="../reference/api/org/eclipse/debug/core/IExpression.html">IExpression</a>
+defines a general interface for debug expressions.</p>
+<p>An expression manager (<a href="../reference/api/org/eclipse/debug/core/IExpressionManager.html">IExpressionManager</a>)
+keeps track of all of the expressions in the workspace.&nbsp; It will also fire
+events to interested listeners as expressions are added, removed, or changed.</p>
+<p>Expressions can be used to implement &quot;watch lists,&quot;
+&quot;inspectors,&quot; or even &quot;scrapbooks&quot; that let users evaluate
+code snippets.&nbsp; The Java tooling uses expressions to implement the
+expression generated when the user inspects the source code.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
