*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
@@ -39,7 +39,10 @@ the following artifacts:</p>
     - a visible data structure in a stack frame or value</li>
 </ul>
 <p>Plug-ins that implement language-specific debuggers typically extend these
-interfaces to include language-specific behavior.</p>
+interfaces to include language-specific behavior.&nbsp; All debug elements can
+return the id of the plug-in that originated them.&nbsp; This is important for
+registering other classes that are associated with a debug model, such as UI
+classes.</p>
 <h4>Actions</h4>
 <p>The model also includes interfaces that define a set of debug actions that
 are common behaviors among debug artifacts.&nbsp; These interfaces are
