*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
@@ -10,7 +10,30 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Debug UI utility classes</h3>
-<p>DebugUITools, IDebugView/AbstractDebugView</p>
+<p>The debug UI plug-in provides some classes that provide good building blocks
+for building debugger user interfaces.</p>
+<p><a href="../reference/api/org/eclipse/debug/ui/DebugUITools.html">DebugUITools</a>
+implements function commonly used by debug user interfaces:</p>
+<ul>
+  <li>storage and retrieval of images on behalf of debug UI clients</li>
+  <li>lookup of debug model presentations associated with a given debug model</li>
+  <li>retrieval of the debug plug-in preference store</li>
+  <li>information about the current debug view in the workbench</li>
+  <li>information about the current program under debug</li>
+  <li>opening the launch configuration dialog</li>
+</ul>
+<p><a href="../reference/api/org/eclipse/debug/ui/IDebugView.html">IDebugView</a>
+provides common function for debug views.&nbsp; It provides access to an
+underlying viewer and its debug model presentation.&nbsp; Typically, clients
+should extend <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html">AbstractDebugView</a>
+rather than implement the interface from scratch.&nbsp; <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html">AbstractDebugView</a>
+provides additional common function:</p>
+<ul>
+  <li>storage of actions in an action registry</li>
+  <li>generic handling of the underlying viewer's context menu</li>
+  <li>general implementations of delete key and double click function </li>
+  <li>mechanism for displaying an error message in the view</li>
+</ul>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
