--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
@@ -10,8 +10,32 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Debug action groups</h3>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>Plug-ins can specify groups of actions that should be shown (or omitted) from
+the tool bars and popup menus of debugger views in the <a href="../reference/extension-points/org_eclipse_debug_ui_debugActionGroups.html">org.eclipse.debug.ui.debugActionGroups</a>
+extension point.&nbsp; This allows groups of
+actions to be handled in a uniform way in debug views.</p>
+<p>Action groups are defined with an <b>id</b>, <b>name</b>, and <b>visible</b>
+attribute.&nbsp; The visible attribute determines whether the actions in the
+group should be shown in debugger views.</p>
+<p>The following example shows the markup for the debug action groups in the
+Java debugger:</p>
+<pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.debugActionGroups&quot;&gt;
+	&lt;debugActionGroup
+		id = &quot;org.eclipse.jdt.debug.ui.javaDebugActionGroup&quot;
+	   	visible=&quot;true&quot;
+	   	name=&quot;Java Debug&quot;&gt;
+	   	&lt;action id=&quot;org.eclipse.jdt.ui.breakpointViewActions.ShowQualified&quot;/&gt;
+	   	&lt;action id=&quot;org.eclipse.jdt.debug.ui.actions.AddException&quot;/&gt;
+	   	&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowQualified&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowStaticFields&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.expressionViewActions.ShowFinalFields&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.launchViewActions.ShowQualified&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.actions.ToggleStepFilter&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowQualified&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowStaticFields&quot;/&gt;
+		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowFinalFields&quot;/&gt;
+	&lt;/debugActionGroup&gt;
+&lt;/extension&gt;</font></pre>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
