*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
@@ -10,13 +10,19 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Debug action groups</h3>
-<p>Plug-ins can specify groups of actions that should be shown (or omitted) from
-the tool bars and popup menus of debugger views in the <a href="../reference/extension-points/org_eclipse_debug_ui_debugActionGroups.html">org.eclipse.debug.ui.debugActionGroups</a>
-extension point.&nbsp; This allows groups of
-actions to be handled in a uniform way in debug views.</p>
-<p>Action groups are defined with an <b>id</b>, <b>name</b>, and <b>visible</b>
+<p>Because the platform is designed to support many different programming
+languages and tools, it's likely that a user will have several different
+debugger implementations installed in the workbench.&nbsp; Typically, a
+developer is working and debugging in one language at a time.&nbsp; However, the
+debug implementations all share the workbench debug perspective and its
+associated views.&nbsp; In order to prevent the debug view's tool bars and popup
+menus from being unduly cluttered, debug plug-ins can specify named groups of
+debug actions that the user can choose to hide or show in the debugger.</p>
+<p>Action groups are defined in the <a href="../reference/extension-points/org_eclipse_debug_ui_debugActionGroups.html">org.eclipse.debug.ui.debugActionGroups</a>
+extension point.&nbsp; An action group has an <b>id</b>, <b>name</b>, and <b>visible</b>
 attribute.&nbsp; The visible attribute determines whether the actions in the
-group should be shown in debugger views.</p>
+group should be shown in debugger views by default.&nbsp; The user can change
+the visibility from the preferences dialog.</p>
 <p>The following example shows the markup for the debug action groups in the
 Java debugger:</p>
 <pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.debugActionGroups&quot;&gt;
@@ -36,6 +42,9 @@ Java debugger:</p>
 		&lt;action id=&quot;org.eclipse.jdt.ui.variableViewActions.ShowFinalFields&quot;/&gt;
 	&lt;/debugActionGroup&gt;
 &lt;/extension&gt;</font></pre>
+<p>Note that the name specified in the extension point is what appears in the
+preferences dialog.</p>
+<p><img border="0" src="images/debugactiongroups.jpg" width="606" height="532"></p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
